# docs/swagger.json
@@ -193,24 +193,6 @@
                         "schema": {
                             "$ref": "#/definitions/controller.ResponseData"
                         }
-                    },
-                    "1001": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1005": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1006": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
                     }
                 }
             }
